// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.scp.coordinator.protos.keymanagement.shared.api.v1;

option java_package = "com.google.scp.coordinator.protos.keymanagement.shared.api.v1";
option java_outer_classname = "KeyDataProto";

/** Represents key material and metadata associated with the key. */
message KeyData {
  /**
   * Cryptographic signature of the public key material from the coordinator identified by
   * keyEncryptionKeyUri
   */
  string public_key_signature = 1;
  /**
   * URI of the cloud KMS key used to encrypt the keyMaterial (also used to identify who owns the
   * key material, and the signer of publicKeySignature)
   *
   * e.g. aws-kms://arn:aws:kms:us-east-1:012345678901:key/abcd
   */
  string key_encryption_key_uri = 2;
  /**
   * The encrypted key material, of type defined by EncryptionKeyType of the EncryptionKey
   */
  string key_material = 3;
}
